# gestalt-motion-planner

./: Dockerfile  README.md  backlog.txt  pyproject.toml  readme.md
.github/: build-and-publish.yml
python/: bindings.cpp
src/: version.inc
src/codingassistants/memberextractor/: CMakeLists.txt
src/codingassistants/pybindgenerator/: classdeclarations.peg
src/planner/: CMakeLists.txt  neldermead.hpp  plannermethods.inc
src/planner/collision/: collisionrobot.h
src/planner/main/: cut_corners.cpp  jsondispatch.inc  log.hpp
src/test/: CMakeLists.txt  test_api.cpp
src/test/urdf/: ico_binary.stl
