[project]
name = "gestalt-planner"
version = "0.1.19"
description = "Gestalt Path Planner"
authors = [
  { name = "Mirko Kunze" },
  { name = "Nina Grabka" },
]
readme = "readme.md"

[tool.scikit-build]
build.verbose = true
cmake.version = "CMakeLists.txt"
cmake.source-dir = "python"
logging.level = "INFO"
wheel.packages = []

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
